--- a/CareNow/package.json
+++ b/CareNow/package.json
@@ -21,7 +21,13 @@
     "@angular/router": "~10.1.5",
     "@syncfusion/ej2-angular-schedule": "^18.3.35",
     "@syncfusion/ej2-material-theme": "~18.2.47",
+    "angular-datatables": "^9.0.2",
+    "datatables.net": "^1.10.22",
+    "datatables.net-dt": "^1.10.22",
     "html2canvas": "^1.0.0-rc.7",
+    "html2pdf": "0.0.11",
+    "html2pdf.js": "^0.9.2",
+    "jquery": "^3.5.1",
     "jspdf": "^2.1.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
@@ -32,9 +38,10 @@
     "@angular-devkit/build-angular": "~0.1001.6",
     "@angular/cli": "~10.1.6",
     "@angular/compiler-cli": "~10.1.5",
-    "@types/node": "^12.11.1",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
