--- a/CareNow/package.json
+++ b/CareNow/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.6",
-    "@angular/cli": "~10.1.6",
+    "@angular/cli": "^10.1.6",
     "@angular/compiler-cli": "~10.1.5",
     "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
